test-cases/negative/test_035_expect_error_without_message.lay
# negative test: expect error without message value
# expected: error should be thrown during execution
# this test should compile but fail at runtime when message is missing

expect error
  throw 'error'
with message
# missing message value
